--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="flexcenter w-100">
                 <a href="./page1.html" class="w-100 startbox button button-v1">
-                    Start Begin to know Earth :)
+                    Start your journey to know Earth :)
                 </a>
             </div>
             <div class="progress-bar">
